# django-react-notes-app

./: README.md  main.py  pyproject.toml
backend/.choreo/: enpoints.yaml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ProtectedRoute.jsx
